datasource db {
  provider = "mysql"
}

generator client {
  provider = "prisma-client-js"
  output   = "../generated/prisma"
}

// ─── Lookup tables ───────────────────────────────────────────────────────────

model StorageCode {
  id   String @id @db.VarChar(2)
  desc String @db.VarChar(60)

  items     Item[]
  locations Location[]
  pallets   Pallet[]
}

// Feature 9 (Demo Scanner) Phase 1, Step 0 — real-data-backed replacement for the
// previously-hardcoded SIZES/SIZE_NAMES frontend constant (apps/floor-app/src/lib/sizes.ts).
// Mirrors StorageCode's own shape exactly. No `items Item[]` back-relation — unlike
// StorageCode, Item has no `size` column at all (checked directly against this file, not
// assumed from the design doc's own proposed shape, which incorrectly included one).
model Size {
  id   String @id @db.VarChar(2)
  desc String @db.VarChar(60)

  locations Location[]
  pallets   Pallet[]
}

model Department {
  id   String @id @db.VarChar(3)
  name String @db.VarChar(60)

  users User[]
}

model HoldType {
  code String @id @db.VarChar(3)
  desc String @db.VarChar(20)

  locations Location[]
}

model PackingZone {
  id   Int    @id
  desc String @db.VarChar(60)

  items Item[]
}

model Store {
  id   Int    @id
  name String @db.VarChar(40)

  containers Container[]
}

// Grouping of aisles into a physical pick/put workstation (e.g. "CR01"). A workstation
// can be a non-contiguous set of aisles, so this is a plain lookup keyed by aisle, not a
// start/end range. `aisle` isn't a true FK to Location (Location's PK is the composite
// (aisle, bin, level) — aisle alone isn't unique there, so no DB-level FK is possible);
// validity is checked at the application layer instead, the same way every other screen
// already validates an aisle against Location (a live existence query, not a constraint).
model Workstation {
  id   String @id @db.VarChar(4)
  name String @db.VarChar(60)

  aisles WorkstationAisle[]
}

model WorkstationAisle {
  aisle         Int    @id
  workstationId String @db.VarChar(4)

  workstation Workstation @relation(fields: [workstationId], references: [id])
}

// ─── Core models ─────────────────────────────────────────────────────────────

model Item {
  dept                   Int
  class                  Int
  item                   Int
  upc                    String   @unique @db.VarChar(12)
  name                   String   @db.VarChar(50)
  desc                   String   @db.Text
  descShort              String   @db.VarChar(155)
  retailPrice            Decimal  @db.Decimal(10, 2)
  cost                   Decimal  @db.Decimal(10, 2)
  packingZoneCode        Int
  storageCode            String   @db.VarChar(2)
  conveyable             Boolean  @default(true)
  // Per-DPCI setting (not derived from Storage Code) — food items are seeded true, but this
  // is meant to be configurable per item rather than a blanket category rule. Drives PII's
  // Expiration Date requirement messaging on pallets of this item; the pallet's own
  // `expirationDate` stays nullable at the DB level regardless (see Pallet.expirationDate).
  requiresExpirationDate Boolean  @default(false)
  // v1.6.8 — displayed on IID; nullable since not every item has been weighed yet. Pounds,
  // 2 decimal places.
  unitWeight             Decimal? @db.Decimal(10, 2)

  packingZone PackingZone @relation(fields: [packingZoneCode], references: [id])
  storageRef  StorageCode @relation(fields: [storageCode], references: [id])

  pallets      Pallet[]
  containers   Container[]
  activityLogs ActivityLog[]

  @@id([dept, class, item], name: "DPCI")
}

model Location {
  aisle        Int
  bin          Int
  level        Int
  zone         Int
  status       String  @db.VarChar(15)
  // holdTypeCode is a reason-code FK (1-letter dept + 2-digit reason, e.g. "B05" — see
  // HoldType below), not the hold category. Left unpopulated per WLH.md, which states
  // twice that the reason code is written only to the ActivityLog, not stored as a
  // column — kept in the schema as inherited, currently-unused infrastructure rather
  // than removed outright (Phase 10, see phase-10 log).
  holdTypeCode String? @db.VarChar(3)
  storageCode  String  @db.VarChar(2)
  size         String  @db.VarChar(2)
  // Contraction is set at zone-side+level granularity by Lead+ via Aisle Setup (out of
  // scope for this demo — see ELZ.md); stored per-location and expected to be uniform
  // across every location sharing a zone-side/level group. Read-only in this app.
  contraction  Boolean @default(false)
  // The hold *category* (HOLD_IN/HOLD_OUT/HOLD_BOTH/HOLD_PERM), independent of `status`
  // per outline.md's original Location description ("HoldType, nullable, independent of
  // Status"). Added Phase 10 — `status` briefly (Phase 6's blockPut) doubled as the hold
  // indicator, which destroys the location's real operational state (EMPTY vs STORED)
  // the moment a hold is placed; fixed to use this field instead. See phase-10 log.
  holdCategory String? @db.VarChar(10)
  // Logic Gate-managed (issue #149/#150) — mirrors the expiry/revert-target data the
  // separate `Reservation` table (createdAt + wasStaged) already tracks for SDP's own
  // 5-minute reservation timeout, enforced today by reservationTimer.ts's cron sweep,
  // which remains the sole *active* enforcer. These two columns exist for design-doc
  // conformance and future lazy-check use (evaluated on read/touch, not swept) — not
  // wired to any new enforcement logic yet. Only ever set/cleared by api/lib/logicGate.ts,
  // never written directly by a screen handler. Both null outside an expiry-bearing
  // intent's lifetime (RESERVE_PUT today; RESERVE_REINSTATE once a future caller uses it).
  statusExpiry DateTime?
  revertStatus String?   @db.VarChar(15)

  holdType   HoldType?   @relation(fields: [holdTypeCode], references: [code])
  storageRef StorageCode @relation(fields: [storageCode], references: [id])
  sizeRef    Size        @relation(fields: [size], references: [id])

  pallets      Pallet[]
  reservations Reservation[]
  activityLogs ActivityLog[]

  @@id([aisle, bin, level], name: "LocationID")
}

model User {
  zNumber      String @id @db.VarChar(7)
  firstName    String @db.VarChar(50)
  lastName     String @db.VarChar(50)
  pinHash      String @db.VarChar(60)
  role         String @db.VarChar(10)
  departmentId String @db.VarChar(3)

  department Department @relation(fields: [departmentId], references: [id])

  receivedPallets Pallet[]      @relation("PalletReceivedBy")
  putPallets      Pallet[]      @relation("PalletPutBy")
  pulledPallets   Pallet[]      @relation("PalletLastPulledBy")
  reservations    Reservation[]
  activityLogs    ActivityLog[]

  // IRP: who was assigned to which prod function, when, and by whom.
  functionAssignmentsAsWorker   FunctionAssignment[] @relation("AssignmentWorker")
  functionAssignmentsAsAssigner FunctionAssignment[] @relation("AssignmentAssignedBy")
}

model Pallet {
  pid              Int       @id
  dept             Int
  class            Int
  item             Int
  receivedPallets  Int
  currentPallets   Int
  receivedCartons  Int
  currentCartons   Int
  receivedSSPs     Int
  currentSSPs      Int
  // How many cartons make up ONE full pallet of this quantity — a fixed snapshot taken at
  // creation (receiving or PAR reinstate), never updated afterward as currentCartons
  // depletes. Added for PAR's v1.6.11 redesign as groundwork for Bulk locations (multiple
  // full pallets + a partial sharing one location) — every pallet gets this now, not just
  // PAR-created ones, backfilled onto pre-existing rows. Rounding rule when derived from a
  // cartons+loose-SSPs pair: wholeCartons + (looseSSPs > 0 ? 1 : 0) — a flat +1 if there's
  // any loose-SSP remainder, not a fractional/ratio-based calculation. `editPallet`'s
  // INSUFFICIENT_QUANTITY check previously used receivedCartons as a stand-in for this
  // exact concept (see that handler's own comment) — now reads this field directly instead.
  cartonsPerPallet Int       @default(0)
  vcp              Int
  ssp              Int
  status           String    @db.VarChar(15)
  locationAisle    Int?
  locationBin      Int?
  locationLevel    Int?
  // The pallet's own Storage Code/Size/Zone — always copied from wherever it's currently
  // STORED (set in placePallet, every time a put/move completes), null while PUT_PENDING
  // (never stored, nothing to inherit from). This is the source of truth Directed Put's
  // default location search reads from when no IM+ override is given: exact-match
  // Storage Code/Size, and Zone as the search's starting point (falling back to Zone 1 if
  // that exact zone has no eligible location — see zoneLogic.ts). Denormalized from
  // Location rather than joined live, since a pallet's put history (and thus its most
  // recent location) can't be reconstructed from Location alone once it moves again.
  storageCode      String?   @db.VarChar(2)
  size             String?   @db.VarChar(2)
  zone             Int?
  receivedByZ      String    @db.VarChar(7)
  receivedAt       DateTime
  putByZ           String?   @db.VarChar(7)
  putAt            DateTime?
  lastPulledByZ    String?   @db.VarChar(7)
  lastPulledAt     DateTime?
  // Receiving-side identifiers (PO = Product Order, Appointment = the trailer the pallet was
  // received on) — set once at receiving, never edited from PII. Null for a pallet created
  // manually via PAR rather than through a real receiving event (see pallets.ts's reinstate
  // handler). No format validation enforced (read-only from every screen today).
  poNumber         String?   @db.VarChar(20)
  apptNumber       String?   @db.VarChar(20)
  // Nullable regardless of the item's own `requiresExpirationDate` — PII surfaces that as a
  // prompt/requirement in the UI, not a DB constraint. Editable via PII's Edit Mode (IM+):
  // must be at least 1 month out (else blocked) and gets a confirm-step warning inside 3
  // months — see PATCH /api/pallets/:id.
  expirationDate   DateTime? @db.Date

  itemRef      Item         @relation(fields: [dept, class, item], references: [dept, class, item], onDelete: NoAction, onUpdate: NoAction)
  location     Location?    @relation(fields: [locationAisle, locationBin, locationLevel], references: [aisle, bin, level], onDelete: NoAction, onUpdate: NoAction)
  storageRef   StorageCode? @relation(fields: [storageCode], references: [id])
  sizeRef      Size?        @relation(fields: [size], references: [id])
  receivedBy   User         @relation("PalletReceivedBy", fields: [receivedByZ], references: [zNumber], onDelete: NoAction, onUpdate: NoAction)
  putBy        User?        @relation("PalletPutBy", fields: [putByZ], references: [zNumber], onDelete: NoAction, onUpdate: NoAction)
  lastPulledBy User?        @relation("PalletLastPulledBy", fields: [lastPulledByZ], references: [zNumber], onDelete: NoAction, onUpdate: NoAction)

  containers   Container[]
  reservations Reservation[]
  activityLogs ActivityLog[]
}

model Container {
  cid              String   @id @db.VarChar(36)
  pid              Int
  dept             Int
  class            Int
  item             Int
  quantity         Int
  sspQuantity      Int
  batchDate        Int
  purgeDate        DateTime @db.Date
  destinationStore Int
  status           String   @db.VarChar(15)
  pullFunction     String   @db.VarChar(2)

  pallet  Pallet @relation(fields: [pid], references: [pid], onDelete: NoAction, onUpdate: NoAction)
  itemRef Item   @relation(fields: [dept, class, item], references: [dept, class, item], onDelete: NoAction, onUpdate: NoAction)
  store   Store  @relation(fields: [destinationStore], references: [id], onDelete: NoAction, onUpdate: NoAction)
}

// Tracks active SDP reservations. One row per in-flight reservation; deleted on resolution.
model Reservation {
  id            Int      @id @default(autoincrement())
  locationAisle Int
  locationBin   Int
  locationLevel Int
  palletId      Int
  workerZ       String   @db.VarChar(7)
  // Original search criteria — preserved so block/find-next can re-run the same query.
  targetAisle   Int
  targetSize    String?  @db.VarChar(2)
  targetStorage String?  @db.VarChar(2)
  targetZone    Int?
  // Preserved from the original directedPut call so a Blocked Put re-search (blockPut)
  // honors the same STAGED-exclusion preference as the initial search.
  consolidating Boolean  @default(false)
  // Whether the Pallet ID that started this reservation was scanned or hand-typed —
  // carried through to confirmPut's activity log entry as the PUT's verification-method
  // record (paired with confirmPut's own scanned-vs-typed read of the location-confirm
  // field). Nullable for migration safety on any pre-existing row, though every reservation
  // directedPut creates from here on always sets it explicitly.
  pidWasScanned Boolean?
  // True if findNextLocation matched this reservation's location via the STAGED search
  // (the preferred/expected outcome), false if it fell through to the EMPTY search —
  // carried through to confirmPut, since by confirm time the location's live status is
  // already RESERVED, not useful for telling which search path originally matched it.
  // Nullable for migration safety on any pre-existing row; every reservation directedPut
  // creates from here on always sets it explicitly.
  wasStaged     Boolean?
  createdAt     DateTime @default(now())

  location Location @relation(fields: [locationAisle, locationBin, locationLevel], references: [aisle, bin, level], onDelete: NoAction, onUpdate: NoAction)
  pallet   Pallet   @relation(fields: [palletId], references: [pid], onDelete: NoAction, onUpdate: NoAction)
  worker   User     @relation(fields: [workerZ], references: [zNumber], onDelete: NoAction, onUpdate: NoAction)
}

model ActivityLog {
  id            Int      @id @default(autoincrement())
  timestamp     DateTime @default(now())
  userId        String   @db.VarChar(7)
  actionType    String   @db.VarChar(10)
  palletId      Int?
  locationAisle Int?
  locationBin   Int?
  locationLevel Int?
  dept          Int?
  class         Int?
  item          Int?
  details       String?  @db.Text
  // IRP prod-function code (CA/CF/FP/RP/HP/GPM/CON), set only on the rows that
  // represent one of IRP's countable actions (see writeLog() call sites in
  // pulls.ts/puts.ts/staging.ts). Null for every other actionType (RESERVE,
  // HOLD_PLACE, STAGE_SUM, RESTAGE, etc.) — those aren't IRP-countable events.
  functionCode  String?  @db.VarChar(3)

  user     User      @relation(fields: [userId], references: [zNumber], onDelete: NoAction, onUpdate: NoAction)
  pallet   Pallet?   @relation(fields: [palletId], references: [pid], onDelete: NoAction, onUpdate: NoAction)
  location Location? @relation(fields: [locationAisle, locationBin, locationLevel], references: [aisle, bin, level], onDelete: NoAction, onUpdate: NoAction)
  itemRef  Item?     @relation(fields: [dept, class, item], references: [dept, class, item], onDelete: NoAction, onUpdate: NoAction)

  @@index([userId, functionCode, timestamp])
}

// IRP hard dependency: who was assigned to which prod function, when, and by whom.
// No in-app assignment UI exists yet (the paired lead web app that will own this is
// out of scope for this build) — rows are stubbed via demo-reseed.ts, same precedent
// PRQ uses to stand in for real label creation.
model FunctionAssignment {
  id           Int      @id @default(autoincrement())
  workerZ      String   @db.VarChar(7)
  // CA, CF, FP, BKP, BK, RP, HP, GPM, CON
  functionCode String   @db.VarChar(3)
  date         DateTime @db.Date
  startTime    DateTime
  endTime      DateTime
  assignedByZ  String   @db.VarChar(7)

  worker     User @relation("AssignmentWorker", fields: [workerZ], references: [zNumber], onDelete: NoAction, onUpdate: NoAction)
  assignedBy User @relation("AssignmentAssignedBy", fields: [assignedByZ], references: [zNumber], onDelete: NoAction, onUpdate: NoAction)

  @@index([workerZ, date])
  @@index([functionCode, date])
}

// IRP stub: goal rates as data, not hardcoded constants (see IRP.md's Prod Functions
// table for the seeded values). Not editable by this app yet — manager-facing goal
// editing is deferred to the paired lead web app — but the table exists now so future
// editing is additive rather than a re-architecture.
// Bulk and Breakpack are blended (two independently-rated components summed as
// "hours of work" — see IRP.md's Blended Goal Calculation); rate2/unit2 hold the
// second component and are null for every single-rate function.
model ProdGoal {
  functionCode  String   @id @db.VarChar(3)
  rate          Decimal  @db.Decimal(10, 2)
  // e.g. "cartons/hr", "pallets/hr", "puts/hr", "locations/hr"
  unit          String   @db.VarChar(20)
  rate2         Decimal? @db.Decimal(10, 2)
  unit2         String?  @db.VarChar(20)
  effectiveDate DateTime @db.Date
}
