erDiagram

    %% ============================================================
    %% TROUBLESHOOTING — read this first if a DB query fails unexpectedly
    %% ============================================================
    %% This app migrated its database engine from Azure SQL Server to a self-hosted
    %% MySQL instance (GitHub #139). If a database query starts failing that wasn't
    %% failing before — a type mismatch, a missing table/column, a broken query, an
    %% auth/connection error — the FIRST thing to check is whether something didn't
    %% get carried over correctly in that engine switch, before assuming the query
    %% logic itself is wrong. Specifically check:
    %%   - `api/prisma/schema.prisma`'s `datasource` provider is `mysql` (not `sqlserver`)
    %%     and every field's `@db.*` type is a MySQL type (VarChar/Text/Decimal/Date),
    %%     not a leftover SQL-Server-only type (NVarChar, etc.).
    %%   - `api/prisma/migrations/` only contains MySQL-provider migrations
    %%     (`migration_lock.toml` should read `provider = "mysql"`) — if SQL-Server-era
    %%     migrations ever reappear or get mixed in, the migration history is corrupted.
    %%   - `DATABASE_URL` (in `api/.env` and `api/local.settings.json`) points at the
    %%     local MySQL instance (`mysql://...@localhost:3306/PalletIQ_DB`), not the old
    %%     Azure SQL connection string.
    %%   - Every Prisma client instantiation uses `@prisma/adapter-mariadb`'s
    %%     `PrismaMariaDb`, not the old `@prisma/adapter-mssql`'s `PrismaMssql` — check
    %%     `api/lib/prisma.ts` and any one-off scripts under `api/prisma/`/`api/scripts/`
    %%     that create their own Prisma/DB client instead of importing the shared one.
    %%   - Any raw SQL (`$queryRaw`/`$executeRaw`, or a direct driver query like
    %%     `api/scripts/export-to-excel.mjs` used to run) uses MySQL syntax/identifier
    %%     quoting (backticks, not SQL Server's square brackets), and doesn't rely on a
    %%     SQL-Server-only function/keyword.
    %% Full migration details, what was checked, and what changed: GitHub issue #139.
    %% ============================================================
    %% COMPOSITE PRIMARY KEYS (Prisma @@id — not expressible in ERD)
    %% ============================================================
    %% Item:     @@id([dept, class, item], name: "DPCI")
    %% Location: @@id([aisle, bin, level], name: "LocationID")
    %% ============================================================
    %% ENUMS — stored as VarChar strings by design continuity (MySQL's Prisma provider does
    %% support native enum blocks, but these stayed as plain strings across the SQL Server → MySQL
    %% migration, GitHub #139, rather than expanding scope)
    %% LocationStatus: EMPTY, STORED, PULL_PENDING, RESERVED, STAGED                                           → VarChar(15)
    %% HoldCategory:   HOLD_IN, HOLD_OUT, HOLD_BOTH, HOLD_PERM (Location.holdCategory, independent of status)   → VarChar(10)
    %% LocationSize:   XS, HS, S, M, L                                                                         → VarChar(2)
    %% PalletStatus:   PUT_PENDING, STORED, CA_PULL_PEND, FP_PULL_PEND, PULLED, CANCELED, CONSOLIDATED         → VarChar(15)
    %% ContainerStatus: AVAILABLE, PRINTED, PULLED, DIVERTED, CANCELED, PURGED                                 → VarChar(15)
    %% PullFunction:   CA (Carton Air), CF (Carton Floor), FP (Full Pallet), BK (Bulk/level-0, not in demo)   → VarChar(2)
    %% Role:           ADMIN, MANAGER, LEAD, IM, WORKER                                                        → VarChar(10)
    %% ActionType:     EDIT_PAL, PULL, RESERVE, PUT, UNASSIGN, BLOCK_PUT, RES_TMOUT, MNP_SCAN, STAGE, RESTAGE,
    %%                 HOLD_PLACE, HOLD_CLEAR, REINSTATE, CONSOLID, MNP_CANCEL                                 → VarChar(10)
    %% ============================================================
    %% BUSINESS RULES
    %% SSP must be a factor of VCP (enforced in app logic, not schema)
    %% CID format: {storeCode(1-4)}{DPCI(9)}{pid(8)}{random(8)}{batchDate(7)} = VarChar(36)
    %% DPCI(9) is zero-padded: dept(3) + class(2) + item(4)
    %% pid: app-generated 8-digit Int with collision check
    %% zNumber format: z###x## (z + 3 digits + 1 letter + 2 digits) = VarChar(7)
    %% PurgeDate defaults to 7 days after batchDate, set at container creation in app logic
    %% Status change to PURGED triggered in app logic on purge date
    %% ActionType enum must be defined and expanded as features are built
    %% Location.holdTypeCode (reason-code FK) is unpopulated — WLH.md states the reason
    %% code is written only to ActivityLog.details, never stored as a column (Phase 10)
    %% ============================================================

    Item {
        int dept PK "3 digits"
        int class PK "2 digits"
        int item PK "4 digits"
        string upc "unique VarChar(12)"
        string name "VarChar(50)"
        string desc "Text"
        string descShort "VarChar(155)"
        decimal retailPrice "Decimal(10,2)"
        decimal cost "Decimal(10,2)"
        int packingZoneCode FK "→ PackingZone"
        string storageCode FK "VarChar(2) → StorageCode"
        boolean conveyable "default: true"
        boolean requiresExpirationDate "default: false, v1.6.7 — per-DPCI setting, seeded true for food Storage Codes (FD/NF/RF); not derived from storageCode at runtime"
        decimal unitWeight "nullable, Decimal(10,2), v1.6.8 — pounds, displayed on IID"
    }

    PackingZone {
        int id PK "2-digit int"
        string desc "VarChar(60)"
    }

    StorageCode {
        string id PK "VarChar(2)"
        string desc "VarChar(60)"
    }

    Workstation {
        string id PK "VarChar(4), e.g. CR01"
        string name "VarChar(60)"
    }

    WorkstationAisle {
        int aisle PK "not a true FK to Location — aisle isn't unique there (Location's PK is aisle+bin+level); validated at the app layer instead"
        string workstationId FK "VarChar(4) → Workstation"
    }

    Location {
        int aisle PK "3 digits"
        int bin PK "3 digits"
        int level PK "2 digits"
        int zone "raw int, set by aisle"
        string status "VarChar(15), LocationStatus values"
        string holdTypeCode FK "nullable, VarChar(3) → HoldType — reason code; unused, see comment below"
        string holdCategory "nullable, VarChar(10), HoldCategory values — independent of status, added Phase 10"
        string storageCode FK "VarChar(2) → StorageCode"
        string size "VarChar(2), LocationSize values"
        boolean contraction "default: false, set by Lead+ via Aisle Setup (out of scope) — read-only in this app"
        datetime statusExpiry "nullable — Logic Gate-managed (#149/#150) mirror of SDP's Reservation.createdAt-based expiry; not the active enforcer, see revertStatus"
        string revertStatus "nullable, VarChar(15) — paired with statusExpiry; set by RESERVE_PUT, cleared by CLEAR_LOCATION/PUT_COMPLETE"
    }

    HoldType {
        string code PK "VarChar(3) → 1 letter (Department) 2 numbers (Reason)"
        string desc "VarChar(20)"
    }

    Pallet {
        int pid PK "8-digit app-generated"
        int dept FK "composite FK → Item"
        int class FK "composite FK → Item"
        int item FK "composite FK → Item"
        int receivedPallets
        int currentPallets
        int receivedCartons
        int currentCartons
        int receivedSSPs
        int currentSSPs
        int cartonsPerPallet "v1.6.11 — cartons making up ONE full pallet, fixed snapshot at creation (not live like currentCartons); every pallet gets this, not just PAR-created; rounding rule wholeCartons+(looseSSPs>0?1:0)"
        int vcp "Vendor Case Pack, eaches per carton"
        int ssp "Store Ship Pack, must be factor of vcp"
        string status "VarChar(15), PalletStatus values"
        int locationAisle FK "nullable → Location"
        int locationBin FK "nullable → Location"
        int locationLevel FK "nullable → Location"
        string storageCode FK "nullable, VarChar(2) → StorageCode — inherited from wherever currently STORED, null if PUT_PENDING"
        string size "nullable, VarChar(2) — inherited from wherever currently STORED, null if PUT_PENDING"
        int zone "nullable — inherited from wherever currently STORED, null if PUT_PENDING"
        string receivedByZ FK "VarChar(7) → User"
        datetime receivedAt
        string putByZ FK "nullable, VarChar(7) → User"
        datetime putAt "nullable"
        string lastPulledByZ FK "nullable, VarChar(7) → User"
        datetime lastPulledAt "nullable"
        string poNumber "nullable, VarChar(20), v1.6.7 — receiving-side identifier, null on a PAR-reinstated pallet, read-only from every screen"
        string apptNumber "nullable, VarChar(20), v1.6.7 — receiving-side identifier, same null/read-only rules as poNumber"
        date expirationDate "nullable, db.Date, v1.6.7 — editable via PII Edit Mode (IM+); 1-month floor / 3-month confirm gate enforced in app logic"
    }

    Container {
        string cid PK "VarChar(36), app-generated composite"
        int pid FK "→ Pallet"
        int dept FK "composite FK → Item"
        int class FK "composite FK → Item"
        int item FK "composite FK → Item"
        int quantity "non-breakpack full cartons"
        int sspQuantity "SSPs to packers"
        int batchDate "Julian date e.g. 2026175"
        date purgeDate "db.Date, default 7 days after batchDate"
        int destinationStore FK "→ Store"
        string status "VarChar(15), ContainerStatus values"
        string pullFunction "VarChar(2), PullFunction values, default CA"
    }

    Store {
        int id PK "4-digit store code"
        string name "VarChar(40)"
    }

    User {
        string zNumber PK "VarChar(7), format z###x##"
        string firstName "VarChar(50)"
        string lastName "VarChar(50)"
        string pinHash "VarChar(60)"
        string role "VarChar(10), Role values"
        string departmentId FK "VarChar(3) → Department"
    }

    Department {
        string id PK "VarChar(3)"
        string name "INB, OUT, WHS, BKP, SEC, IQA"
    }

    Reservation {
        int id PK "autoincrement"
        int locationAisle FK "→ Location"
        int locationBin FK "→ Location"
        int locationLevel FK "→ Location"
        int palletId FK "→ Pallet"
        string workerZ FK "VarChar(7) → User"
        int targetAisle "original search aisle"
        string targetSize "nullable, VarChar(2)"
        string targetStorage "nullable, VarChar(2)"
        int targetZone "nullable"
        boolean consolidating "default: false, preserved for Blocked Put re-search"
        boolean pidWasScanned "nullable — Scan vs Enter verification-method tracking, see ActivityLog.details.verification"
        boolean wasStaged "nullable — whether the location was already STAGED when directed, see confirmPut"
        datetime createdAt "auto-set on creation"
    }

    ActivityLog {
        int id PK "autoincrement"
        datetime timestamp "auto-set on creation"
        string userId FK "VarChar(7) → User"
        string actionType "VarChar(10), ActionType values, TBD"
        int palletId FK "nullable → Pallet"
        int locationAisle FK "nullable → Location"
        int locationBin FK "nullable → Location"
        int locationLevel FK "nullable → Location"
        int dept FK "nullable → Item"
        int class FK "nullable → Item"
        int item FK "nullable → Item"
        string details "nullable, Text, free JSON notes"
        string functionCode "nullable, VarChar(3) — IRP prod-function code (CA/CF/FP/RP/HP/GPM/CON), set only on IRP-countable rows"
    }

    FunctionAssignment {
        int id PK "autoincrement"
        string workerZ FK "VarChar(7) → User"
        string functionCode "VarChar(3) — CA/CF/FP/BKP/BK/RP/HP/GPM/CON"
        date date "the assignment's calendar date"
        datetime startTime "block start"
        datetime endTime "block end"
        string assignedByZ FK "VarChar(7) → User"
    }

    ProdGoal {
        string functionCode PK "VarChar(3)"
        decimal rate "Decimal(10,2)"
        string unit "VarChar(20), e.g. cartons/hr"
        decimal rate2 "nullable, Decimal(10,2) — second blended component (Bulk/Breakpack only)"
        string unit2 "nullable, VarChar(20) — second blended component's unit"
        date effectiveDate "when this rate took effect"
    }

    %% ============================================================
    %% RELATIONS
    %% ============================================================

    Item }o--|| PackingZone : "packingZoneCode"
    Item }o--|| StorageCode : "storageCode"

    Location }o--o| HoldType : "holdTypeCode (nullable)"
    Location }o--|| StorageCode : "storageCode"

    WorkstationAisle }o--|| Workstation : "workstationId"

    Pallet }o--|| Item : "dept/class/item"
    Pallet }o--o| Location : "locationAisle/Bin/Level (nullable)"
    Pallet }o--o| StorageCode : "storageCode (nullable)"
    Pallet }o--|| User : "receivedByZ"
    Pallet }o--o| User : "putByZ (nullable)"
    Pallet }o--o| User : "lastPulledByZ (nullable)"

    Container }o--|| Pallet : "pid"
    Container }o--|| Item : "dept/class/item"
    Container }o--|| Store : "destinationStore"

    User }o--|| Department : "departmentId"

    Reservation }o--|| Location : "locationAisle/Bin/Level"
    Reservation }o--|| Pallet : "palletId"
    Reservation }o--|| User : "workerZ"

    ActivityLog }o--|| User : "userId"
    ActivityLog }o--o| Pallet : "palletId (nullable)"
    ActivityLog }o--o| Location : "locationAisle/Bin/Level (nullable)"
    ActivityLog }o--o| Item : "dept/class/item (nullable)"

    FunctionAssignment }o--|| User : "workerZ"
    FunctionAssignment }o--|| User : "assignedByZ"
